--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1;
       var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/);
       if (isAndroid == 1) {
-        window.location.href = "https://fir.im/mzqp"
+        window.location.href = "http://u8q.336.jdf112.cn/R6PED"
       } else {
         console.log("ios")
         window.location.href = "https://dj-design.cn/v/KfpH4U"
